--- a/src/pages/meal-logging/meal-logging.html
+++ b/src/pages/meal-logging/meal-logging.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <form>
+  <form [formGroup]="mealForm">
     <ion-card>
       <img src="assets/placeholder.jpg">
       <ion-fab right style="margin-top: -30px; margin-right: 30px;">
@@ -25,12 +25,12 @@
       <ion-list>
         <ion-item>
           <ion-label floating>Notes</ion-label>
-          <ion-textarea></ion-textarea>
+          <ion-textarea [formControl]="mealForm.controls['notes']"></ion-textarea>
         </ion-item>
         <ion-item>
           <!-- TODO: Pull options in dynamically from endpoint -->
           <ion-label>Meal Type</ion-label>
-          <ion-select>
+          <ion-select [formControl]="mealForm.controls['type']">
             <ion-option value="Breakfast">Breakfast</ion-option>
             <ion-option value="Lunch">Lunch</ion-option>
             <ion-option value="Dinner">Dinner</ion-option>
