--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -20,12 +20,12 @@
         <ion-item>
           <ion-label floating>Username</ion-label>
           <ion-input [formControl]="loginForm.controls['username']" type="text" required></ion-input>
-          <div [hidden]="username.valid || !username.touched">A username is required</div>
+          <div [hidden]="loginForm.controls.username.valid || !loginForm.controls.username.touched">A username is required</div>
         </ion-item>
         <ion-item>
           <ion-label floating>Password</ion-label>
           <ion-input [formControl]="loginForm.controls['password']" type="password" required></ion-input>
-          <div [hidden]="password.valid || !password.touched">A password is required</div>
+          <div [hidden]="loginForm.controls.password.valid || !loginForm.controls.password.touched">A password is required</div>
         </ion-item>
       </ion-list>
     </ion-card>
