feat: Add button to close modal

--- a/src/pages/add-fruit/add-fruit.html
+++ b/src/pages/add-fruit/add-fruit.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>Add Fruit</ion-title>
+    <ion-buttons end>
+      <button (click)="closeModal()" ion-button icon-only color="dark">
+        <ion-icon name="close"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
