--- a/src/pages/add-fruit/add-fruit.html
+++ b/src/pages/add-fruit/add-fruit.html
@@ -24,14 +24,16 @@
         <!-- TODO: Pull options in dynamically from endpoint -->
         <ion-label>Produce</ion-label>
         <ion-select [formControl]="fruitForm.controls['name']" required>
-          <ion-option value="Apple">Apple</ion-option>
+          <ion-option *ngFor="let fruit of produceValues" value="{{ fruit.name }}">{{ fruit.name }}</ion-option>
           <ion-option value="Banana">Banana</ion-option>
           <ion-option value="Orange">Orange</ion-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label>Portion</ion-label>
-        <ion-input [formControl]="fruitForm.controls['portion']" type="number" min="0.25" max="24" step="0.25" required></ion-input>
+        <ion-input [formControl]="fruitForm.controls['portion']" min="0.25" max="24" step="0.25" type="number" required></ion-input>
+        <div>E.g. One Apple</div>
+        <!--<div [hidden]="!portion.hasError('portionAmount')">A portion must be between 0.24 and 24</div>-->
       </ion-item>
       <ion-item>
         <ion-label>Provided</ion-label>
