feat: Add conditional description to add fruit modal

--- a/src/pages/meal-logging/meal-logging.html
+++ b/src/pages/meal-logging/meal-logging.html
@@ -24,8 +24,8 @@
       </ion-fab>
       <ion-list>
         <ion-item>
-          <ion-label floating>Notes</ion-label>
-          <ion-textarea [formControl]="mealForm.controls['notes']"></ion-textarea>
+          <!--<ion-label floating>Notes</ion-label>
+          <ion-textarea [formControl]="mealForm.controls['notes']"></ion-textarea>-->
         </ion-item>
         <ion-item>
           <!-- TODO: Pull options in dynamically from endpoint -->
