--- a/src/pages/add-fruit/add-fruit.html
+++ b/src/pages/add-fruit/add-fruit.html
@@ -23,25 +23,28 @@
       <ion-item>
         <!-- TODO: Pull options in dynamically from endpoint -->
         <ion-label>Produce</ion-label>
-        <ion-select [formControl]="fruitForm.controls['name']" required>
+        <ion-select formControlName="name" required>
           <ion-option *ngFor="let fruit of produceValues" value="{{ fruit.name }}">{{ fruit.name }}</ion-option>
-          <ion-option value="Banana">Banana</ion-option>
-          <ion-option value="Orange">Orange</ion-option>
         </ion-select>
+      </ion-item>
+      <ion-item *ngIf="showDescription">
+        <ion-label>Description</ion-label>
+        <ion-input type="text" formControlName="description" required></ion-input>
+        <!--<div [hidden]="!portion.hasError('portionAmount')">A portion must be between 0.24 and 24</div>-->
       </ion-item>
       <ion-item>
         <ion-label>Portion</ion-label>
-        <ion-input type="number" [formControl]="fruitForm.controls['portion']" min="0.25" max="24" step="0.25" required></ion-input>
+        <ion-input type="number" formControlName="portion" min="0.25" max="24" step="0.25" required></ion-input>
         <div>E.g. One Apple</div>
         <!--<div [hidden]="!portion.hasError('portionAmount')">A portion must be between 0.24 and 24</div>-->
       </ion-item>
       <ion-item>
         <ion-label>Provided</ion-label>
-        <ion-checkbox [formControl]="fruitForm.controls['provided']" value="false"></ion-checkbox>
+        <ion-checkbox formControlName="provided" value="false"></ion-checkbox>
       </ion-item>
       <ion-item>
         <ion-label>Organic</ion-label>
-        <ion-checkbox [formControl]="fruitForm.controls['organic']" value="false"></ion-checkbox>
+        <ion-checkbox formControlName="organic" value="false"></ion-checkbox>
       </ion-item>
     </ion-list>
   <div padding>
