--- a/src/pages/meal-logging/meal-logging.html
+++ b/src/pages/meal-logging/meal-logging.html
@@ -16,9 +16,9 @@
 <ion-content padding>
   <form [formGroup]="mealForm" novalidate>
     <ion-card>
-      <img src="assets/placeholder.jpg">
+      <img [src]="mealImage || 'assets/placeholder.jpg'">
       <ion-fab right style="margin-top: -30px; margin-right: 30px;">
-        <button ion-fab color="danger">
+        <button (click)="takePicture()" ion-fab color="danger">
           <ion-icon name="camera"></ion-icon>
         </button>
       </ion-fab>
