hide organic checkbox instead of disabling

--- a/src/pages/add-fruit/add-fruit.html
+++ b/src/pages/add-fruit/add-fruit.html
@@ -42,12 +42,9 @@
         <ion-label>Provided</ion-label>
         <ion-checkbox formControlName="provided" value="false"></ion-checkbox>
       </ion-item>
-      <ion-item>
+      <ion-item [hidden]="fruitForm.controls.provided.value">
         <ion-label>Organic</ion-label>
-        <ion-checkbox
-          formControlName="organic"
-          [disabled]="fruitForm.controls.provided.value"
-          value="false">
+        <ion-checkbox formControlName="organic" value="false">
       </ion-checkbox>
       </ion-item>
     </ion-list>
