--- a/src/pages/add-fruit/add-fruit.html
+++ b/src/pages/add-fruit/add-fruit.html
@@ -35,9 +35,9 @@
       <ion-item>
         <ion-label>Portion</ion-label>
         <ion-input type="number" formControlName="portion" min="0.25" max="24" step="0.25" required></ion-input>
-        <div>E.g. One Apple</div>
         <!--<div [hidden]="!portion.hasError('portionAmount')">A portion must be between 0.24 and 24</div>-->
       </ion-item>
+      <p><small>{{ portionTip }}</small></p>
       <ion-item>
         <ion-label>Provided</ion-label>
         <ion-checkbox formControlName="provided" value="false"></ion-checkbox>
