fix: Persistent login

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <form autocomplete="on" [formGroup]="loginForm">
+  <form [hidden]="!authChecked" autocomplete="on" [formGroup]="loginForm">
     <ion-card>
       <ion-list>
         <ion-item>
