fix: fruit->produce on widgets

--- a/src/pages/meal-logging/meal-logging.html
+++ b/src/pages/meal-logging/meal-logging.html
@@ -57,7 +57,7 @@
   </form>
   <div padding>
     <button full (click)="showAddFruitModal()" ion-button color="secondary" block>
-      Add Fruits
+      Add Produce
     </button>
   </div>
   <p>&nbsp;</p>
