--- a/src/pages/add-fruit/add-fruit.html
+++ b/src/pages/add-fruit/add-fruit.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Add Fruit</ion-title>
+    <ion-title>Add Produce</ion-title>
     <ion-buttons end>
       <button (click)="closeModal()" ion-button icon-only color="dark">
         <ion-icon name="close"></ion-icon>
@@ -49,7 +49,11 @@
       </ion-item>
     </ion-list>
   <div padding>
-    <button (click)="addFruit()" [disabled]="!fruitForm.valid" ion-button color="secondary" block>Add Fruit</button>
+    <button
+      (click)="addFruit()"
+      [disabled]="!fruitForm.valid"
+      ion-button
+      color="secondary" block>Add Produce</button>
   </div>
   </form>
 </ion-content>
