--- a/src/pages/meal-logging/meal-logging.html
+++ b/src/pages/meal-logging/meal-logging.html
@@ -66,7 +66,7 @@
 <ion-footer>
   <button *ngIf="fruits.length"
           (click)="submitMeal()"
-          [disabled]="!mealForm.valid || !fruits.length || !mealImage"
+          [disabled]="!mealForm.valid || !fruits.length"
           full
           ion-button
           color="danger"
